# jsip-exchange

.claude/agents/: architecture-cartographer.md  code-improver.md  git-guardian.md  part4-tutor.md
app/bots/src/: book_filler.ml  book_filler.mli  cancel_storm.mli  spammer.ml  spammer.mli
app/bots/test/: test_bots.ml
app/dashboard/client/src/: app.ml  app.mli  chart.ml  chart.mli  dune  jsip_dashboard_client.ml  jsip_dashboard_client.mli  panes.ml  panes.mli  styles.ml  styles.mli
app/dashboard/protocol/: dashboard_protocol.ml  dashboard_protocol.mli
app/dashboard/test/: dune  test_dashboard_protocol.ml  test_sample_history.ml  test_view_model.ml
app/dashboard/view_model/: dune  view_model.ml  view_model.mli
app/market_maker/src/: market_maker.ml  market_maker.mli
app/market_maker/test/: dune  test_market_maker.ml
app/monitor/src/: controller.ml  controller.mli  event_log.ml  event_log.mli  term_app.ml
app/monitor/test/: test_controller.ml  test_event_log.ml
app/scenario_runner/src/: runner.ml
app/scenarios/src/: book_filler.ml  order_spam.ml  slow_consumer.ml
dev/bench/: data.js
lib/bot_runtime/src/: bot_runtime.mli
lib/bot_runtime/test/: test_bot_runtime.ml
lib/exchange_stats/src/: exchange_stats.ml  exchange_stats.mli  jsip_exchange_stats.ml  jsip_exchange_stats.mli
lib/exchange_stats/test/: dune  test_exchange_stats.ml
lib/gateway/src/: dispatcher.ml  dispatcher.mli  dune  event_formatter.ml  event_formatter.mli  exchange_command.ml  (+12 more)
performance/src/: allocations.ml  associatives.ml  jsip_exchange_perf_lib.ml  sequences.ml
(+41 files in other folders)
